# Morningstar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
core/: MORNINGSTAR.md  README.md  mfaf.md  personalities copy.md  personalities.md  procedures.md  sme-framework.md
courtroom/: BEST_PRACTICES.md  README.md  RULES.md
courtroom/transcripts/: 20260214_030000_feasibility_framework.md  20260214_044300_system_advancement.md  20260214_050000_sme_framework.md  20260214_060000_judicial_consultant.md  20260214_140000_doj_epstein_disclosure_analysis.md  20260214_180000_special_interest_january_6th_analysis.md  README.md
domains/: README.md  experts.yaml
examples/: README.md
examples/discussions/: README.md  feasibility-scale-deliberation.md
portal/: README.md  dracula.css  generate.py  launch.sh  viewer.html
portal/exports/: 20260214_030000_feasibility_framework.html  20260214_044300_system_advancement.html  20260214_060000_judicial_consultant.html  20260214_140000_doj_epstein_disclosure_analysis.html  test.html  (+1 more)
schema/: README.md  assessment.schema.json  deliberation.schema.json  session.schema.json  state.schema.json
sessions/: README.md  deliberation_20260214_court_advancement.md
state/: README.md  current.md  f0-registry.md
templates/: README.md  architecture-decision.md  feature-assessment.md  incident-review.md  prophet-vindication.md  sme-testimony.md  special-interest-hearing.md
tools/: README.md  __init__.py  assess.py  backup.py  changelog.py  cli.py  export.py  session.py  state.py  validate.py
